started doing buttons

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 	<script src="/game/unit1.js"></script>
 	<script src="/game/tower.js"></script>
 	<script src="/game/tower_defence.js"></script>
+	<script src="/game/buttons.js"></script>
 
 	<!-- <script src="/models/message.js"></script> -->
 	<script src="/models/user.js"></script>
