--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,17 @@
 	<div class="js-game gamebg" id="myGame" hidden="hidden">
 		<canvas class="js-canvas"></canvas>
 	</div>
+
+		<!-- <script src="/models/message.js"></script> -->
+	<script src="/models/user.js"></script>
+	<script src="/components/block/block.js"></script>
+	<script src="/components/button/button.js"></script>
+	<script src="/components/form/form.tmpl.js"></script>
+	<script src="/components/form/form.js"></script>
+	<script src="/components/chat/chat.tmpl.js"></script>
+	<script src="/components/chat/chat.js"></script>
+
+	<script src="/game/gamebutton.js"></script>
 	<script src="/game/sprite.js"></script>
 	<script src="/libs/technolibs/index.js"></script>
 	<script src="/modules/pathToRegex.js"></script>
@@ -33,19 +44,13 @@
 	<script src="/modules/route.js"></script>
 	<script src="/modules/router.js"></script>
 	<script src="/game/keymaster.js"></script>
+	<script src="/game/panel.js"></script>
 	<script src="/game/unit1.js"></script>
 	<script src="/game/tower.js"></script>
 	<script src="/game/tower_defence.js"></script>
-	<script src="/game/buttons.js"></script>
 
-	<!-- <script src="/models/message.js"></script> -->
-	<script src="/models/user.js"></script>
-	<script src="/components/block/block.js"></script>
-	<script src="/components/button/button.js"></script>
-	<script src="/components/form/form.tmpl.js"></script>
-	<script src="/components/form/form.js"></script>
-	<script src="/components/chat/chat.tmpl.js"></script>
-	<script src="/components/chat/chat.js"></script>
+
+
 
 
 
