--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-	<div class="js-main"></div>
+	<div class="js-main bg"></div>
 	<div class="js-login bg" hidden="hidden"></div>
 	<div class="js-regist bg" hidden="hidden"></div>
 	<div class="js-chat" hidden="hidden"></div>
