--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-	<div class="js-main bg"></div>
+	<div class="js-main bg " hidden="hidden"></div>
 	<div class="js-login bg" hidden="hidden"></div>
 	<div class="js-regist bg" hidden="hidden"></div>
 	<div class="js-chat" hidden="hidden"></div>
@@ -26,7 +26,7 @@
 		<canvas class="js-canvas"></canvas>
 	</div>
 
-		<!-- <script src="/models/message.js"></script> -->
+	<!-- <script src="/models/message.js"></script> -->
 	<script src="/models/user.js"></script>
 	<script src="/components/block/block.js"></script>
 	<script src="/components/button/button.js"></script>
@@ -35,7 +35,6 @@
 	<script src="/components/chat/chat.tmpl.js"></script>
 	<script src="/components/chat/chat.js"></script>
 
-	<script src="/game/user_panel.js"></script>
 	<script src="/game/gamebutton.js"></script>
 	<script src="/game/sprite.js"></script>
 	<script src="/libs/technolibs/index.js"></script>
