--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 	<script src="/components/chat/chat.tmpl.js"></script>
 	<script src="/components/chat/chat.js"></script>
 
+	<script src="/game/user_panel.js"></script>
 	<script src="/game/gamebutton.js"></script>
 	<script src="/game/sprite.js"></script>
 	<script src="/libs/technolibs/index.js"></script>
