--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,11 @@
 	<div class="js-profile" hidden="hidden"></div>
 	<div class="js-searchGame" hidden="hidden"></div>
 	<div class="js-rating" hidden="hidden"></div>
+	<div class="js-buttons" hidden="hidden"></div>
 	<div class="js-game gamebg" id="myGame" hidden="hidden">
 		<canvas class="js-canvas"></canvas>
 	</div>
+
 
 	<!-- <script src="/models/message.js"></script> -->
 	<script src="/models/user.js"></script>
