--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
 
 	<script src="/game/user_panel.js"></script>
 	<script src="/game/gamebutton.js"></script>
+	<script src="/game/bot.js"></script>	
 	<script src="/game/sprite.js"></script>
 	<script src="/libs/technolibs/index.js"></script>
 	<script src="/modules/pathToRegex.js"></script>
