all paths is work

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Frontend privet</title>
+	<title>AGRage</title>
 	<link rel="stylesheet" href="/css/milligram.min.css" />
 	<link rel="stylesheet" href="/css/main.css" />
 
@@ -17,7 +17,7 @@
 	<div class="js-login bg" hidden="hidden"></div>
 	<div class="js-regist bg" hidden="hidden"></div>
 	<div class="js-chat" hidden="hidden"></div>
-	<div class="js-menu" hidden="hidden"></div>
+	<div class="js-menu bg" hidden="hidden"></div>
 	<div class="js-config" hidden="hidden"></div>
 	<div class="js-profile" hidden="hidden"></div>
 	<div class="js-searchGame" hidden="hidden"></div>
