--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-	<div class="bg " hidden="hidden">
+	<div class="bg">
 		<div class="js-main" hidden="hidden"> </div>
 	</div>
 	<div class="js-login bg" hidden="hidden"></div>
