--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
 
 	<!-- <script src="/models/message.js"></script> -->
+
 	<script src="/models/user.js"></script>
 	<script src="/components/block/block.js"></script>
 	<script src="/components/button/button.js"></script>
@@ -35,6 +36,7 @@
 	<script src="/components/form/form.js"></script>
 	<script src="/components/chat/chat.tmpl.js"></script>
 	<script src="/components/chat/chat.js"></script>
+	<script src="/modules/cookie.js"></script>
 
 	<script src="/game/user_panel.js"></script>
 	<script src="/game/gamebutton.js"></script>
