--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
 
 	<div class="bg">
 		<div class="js-main" hidden="hidden"> </div>
+		<div class="js-login" hidden="hidden"></div>
+		<div class="js-regist" hidden="hidden"></div>
+		<div class="js-chat" hidden="hidden"></div>
+		<div class="js-menu" hidden="hidden"></div>
+		<div class="js-config" hidden="hidden"></div>
+		<div class="js-profile" hidden="hidden"></div>
+		<div class="js-searchGame" hidden="hidden"></div>
+		<div class="js-rating" hidden="hidden"></div>
 	</div>
-	<div class="js-login bg" hidden="hidden"></div>
-	<div class="js-regist bg" hidden="hidden"></div>
-	<div class="js-chat" hidden="hidden"></div>
-	<div class="js-menu bg" hidden="hidden"></div>
-	<div class="js-config" hidden="hidden"></div>
-	<div class="js-profile" hidden="hidden"></div>
-	<div class="js-searchGame" hidden="hidden"></div>
-	<div class="js-rating" hidden="hidden"></div>
 	<div class="js-game gamebg" id="myGame" hidden="hidden">
 		<canvas class="js-canvas"></canvas>
 	</div>
