--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
 	<!-- <script src="/models/message.js"></script> -->
 
 	<script src="/models/user.js"></script>
+	<script src="/models/user_rating.js"></script>
 	<script src="/components/block/block.js"></script>
 	<script src="/components/button/button.js"></script>
 	<script src="/components/form/form.tmpl.js"></script>
