--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,72 @@
 	<script src="/views/ratingView.js"></script>
 	<script src="/views/chat.js"></script>
 	<script src="main.js"></script>
+
+	<script language="javascript" type="text/javascript">
+
+  var wsUri = "wss://agragebackend.herokuapp.com/api/game/";
+  var output;
+
+  function init()
+  {
+    output = document.getElementById("output");
+    testWebSocket();
+  }
+
+  function testWebSocket()
+  {
+    websocket = new WebSocket(wsUri);
+    websocket.onopen = function(evt) { onOpen(evt) };
+    websocket.onclose = function(evt) { onClose(evt) };
+    websocket.onmessage = function(evt) { onMessage(evt) };
+    websocket.onerror = function(evt) { onError(evt) };
+  }
+
+  function onOpen(evt)
+  {
+  	console.log("CONNECTED")
+    //writeToScreen("CONNECTED");
+    doSend("WebSocket rocks");
+  }
+
+  function onClose(evt)
+  {
+  	console.log("DISCONNECTED")
+    //writeToScreen("DISCONNECTED");
+  }
+
+  function onMessage(evt)
+  {
+    
+    console.log("RESPONSE:"  + evt.data)
+    //writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
+    websocket.close();
+  }
+
+  function onError(evt)
+  {
+    console.log("Error:"  + evt.data)
+    //writeToScreen('<span style="color: red;">ERROR:</span> ' + evt.data);
+  }
+
+  function doSend(message)
+  {
+    console.log("SENT:"  + message)
+    //writeToScreen("SENT: " + message);
+    websocket.send(message);
+  }
+
+  function writeToScreen(message)
+  {
+    var pre = document.createElement("p");
+    pre.style.wordWrap = "break-word";
+    pre.innerHTML = message;
+    output.appendChild(pre);
+  }
+
+  window.addEventListener("load", init, false);
+
+  </script>
 </body>
 
 </html>
