--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 
 	<script language="javascript" type="text/javascript">
 
-  var wsUri = "wss://agragebackend.herokuapp.com/api/game/";
+  var wsUri = "ws://agragebackend.herokuapp.com/api/game/";
   var output;
 
   function init()
