starting doing online game

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 	<script src="/views/chat.js"></script>
 	<script src="/views/configView.js"></script>
 	<script src="/views/profileView.js"></script>
-	<script src="/views/searchGameView.js"></script>
+	<script src="/views/onlineGameView.js"></script>
 	<script src="/views/ratingView.js"></script>
 	<script src="/views/chat.js"></script>
 	<script src="main.js"></script>
