starting doing online game

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,10 @@
 	<script src="/game/gamebutton.js"></script>
 	<script src="/game/bot.js"></script>
 	<script src="/game/sprite.js"></script>
+
+
+
+
 	<script src="/libs/technolibs/index.js"></script>
 	<script src="/modules/pathToRegex.js"></script>
 	<script src="/modules/view.js"></script>
@@ -54,6 +58,7 @@
 	<script src="/game/unit1.js"></script>
 	<script src="/game/tower.js"></script>
 	<script src="/game/tower_defence.js"></script>
+	<script src="/multiplayer/online_game.js"></script>
 
 
 
