--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 	<title>AGRage</title>
 	<link rel="stylesheet" href="/css/milligram.min.css" />
 	<link rel="stylesheet" href="/css/main.css" />
-
 	<!--<link rel="stylesheet" href="/components/button/button.css" /> -->
 	<link rel="stylesheet" href="/components/chat/chat.css" />
 </head>
@@ -32,6 +31,7 @@
 
 
 	<!-- <script src="/models/message.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/sockjs/1/sockjs.min.js"></script>
 
 	<script src="/models/user.js"></script>
 	<script src="/components/block/block.js"></script>
@@ -82,7 +82,7 @@
 	<script src="/views/chat.js"></script>
 	<script src="main.js"></script>
 
-<!-- 	<script language="javascript" type="text/javascript">
+	<!-- 	<script language="javascript" type="text/javascript">
 		var wsUri = "wss://agragebackend.herokuapp.com/api/game/";
 		var output;
 
