--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,7 @@
 	<script src="/components/chat/chat.js"></script>
 	<script src="/modules/cookie.js"></script>
 
-	<script src="/game/user_panel.js"></script>
-	<script src="/game/gamebutton.js"></script>
-	<script src="/game/bot.js"></script>
-	<script src="/game/sprite.js"></script>
+
 
 
 
@@ -58,11 +55,23 @@
 	<script src="/modules/router.js"></script>
 	<script src="/modules/messaging.js"></script>
 	<script src="/modules/socket.js"></script>
+	<script src="/game/user_panel.js"></script>
+	<script src="/game/gamebutton.js"></script>
+	<script src="/game/bot.js"></script>
+	<script src="/game/sprite.js"></script>
 	<script src="/game/keymaster.js"></script>
 	<script src="/game/unit1.js"></script>
 	<script src="/game/tower.js"></script>
 	<script src="/game/tower_defence.js"></script>
+	<script src="/multiplayer/sprite.js"></script>
 	<script src="/multiplayer/online_game.js"></script>
+	<script src="/multiplayer/keymaster.js"></script>
+	<script src="/multiplayer/unit1.js"></script>
+	<script src="/multiplayer/tower.js"></script>
+	<script src="/multiplayer/tower_defence.js"></script>
+	<script src="/multiplayer/user_panel.js"></script>
+	<script src="/multiplayer/gamebutton.js"></script>
+	<script src="/multiplayer/bot.js"></script>
 
 
 
