--- a/public/index.html
+++ b/public/index.html
@@ -63,15 +63,15 @@
 	<script src="/game/unit1.js"></script>
 	<script src="/game/tower.js"></script>
 	<script src="/game/tower_defence.js"></script>
-	<script src="/multiplayer/sprite.js"></script>
-	<script src="/multiplayer/online_game.js"></script>
-	<script src="/multiplayer/keymaster.js"></script>
-	<script src="/multiplayer/unit1.js"></script>
-	<script src="/multiplayer/tower.js"></script>
-	<script src="/multiplayer/tower_defence.js"></script>
-	<script src="/multiplayer/user_panel.js"></script>
-	<script src="/multiplayer/gamebutton.js"></script>
-	<script src="/multiplayer/bot.js"></script>
+
+	<script src="/game_online/sprite.js"></script>
+	<script src="/game_online/keymaster.js"></script>
+	<script src="/game_online/unit1.js"></script>
+	<script src="/game_online/tower.js"></script>
+	<script src="/game_online/user_panel.js"></script>
+	<script src="/game_online/gamebutton.js"></script>
+	<script src="/game_online/bot.js"></script>
+	<script src="/game_online/online_game.js"></script>
 
 
 
